not-found and loading pages created. Add tailwind lib

--- a/Front/hbb/src/css/globals.css
+++ b/Front/hbb/src/css/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
     --primary-color: #1c1c1c;
     --primary-color-70: rgba(28, 28, 28, 0.7);
