--- a/Front/hbb/src/css/globals.css
+++ b/Front/hbb/src/css/globals.css
@@ -9,13 +9,31 @@
     --background-color: #e8e8e8;
     --background-color-80: rgba(210, 210, 210, 0.8);
     --background-color-20: rgba(210, 210, 210, 0.2);
+    --border-color: rgba(79, 79, 79, 0.7);
     --text-color-default: #000000;
     --text-color-default-80: rgba(0, 0, 0, 0.8);
     --text-color-default-30: rgba(0, 0, 0, 0.3);
     --text-color-primary: #0e009b;
     --text-color-reverse: #f3f3f3;
+
+
+    --hue: 223;
+    --bg: hsl(var(--hue),10%,90%);
+    --fg: hsl(var(--hue),10%,10%);
+    --primary: hsl(var(--hue),90%,55%);
+    --primary-l: hsl(var(--hue),90%,65%);
+    --primary-d: hsl(var(--hue),90%,45%);
+    --white: hsl(var(--hue),10%,100%);
+    --white-d: hsl(var(--hue),10%,45%);
 }
 
 root:has(.dark) {
 
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
