--- a/Front/hbb/src/css/mainpage.css
+++ b/Front/hbb/src/css/mainpage.css
@@ -19,8 +19,22 @@ header {
     justify-content: flex-start;
     flex-direction: column;
     flex-wrap: nowrap;
+    padding: 0 10%;
 }
 
 main {
-    padding-top: 80px;
+    width: 100%;
+    height: 100%;
+}
+
+.main__page__container {
+    padding: 105px 15px 0 15px;
+    background-color: var(--background-color-20);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
