--- a/Front/hbb/src/css/components/news_container.css
+++ b/Front/hbb/src/css/components/news_container.css
@@ -10,11 +10,52 @@
     flex-direction: row;
     justify-content: space-between;
     box-shadow: 5px 5px 5px var(--border-color);
-
+    margin-bottom: 30px;
 }
 
 .news__icon {
+    border-radius: 10px 0 0 10px;
+    width: 40%;
+    height: 100%;
+}
+
+.text__container {
+    padding: 10px 10px 10px 10%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.text__title:hover {
+    color: var(--text-color-primary);
+    font-size: 38px;
+    translate: 10px;
+}
+
+.text__info {
+    padding: 25px 0 0 5px;
+}
+
+.button {
+    margin-top: 30px;
+    padding: 10px;
+    width: fit-content;
+    background-color: var(--button-color-primary);
+    color: var(--white);
     border-radius: 10px;
-    width: 300px;
-    height: 300px;
+    align-content: end;
+    display: flex;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: 0 0;
+    transition: background-size .2s, color .2s;
+}
+
+.button:hover {
+    background-image: linear-gradient(var(--button-color-primary), var(--button-color-primary-dark));
+    translate: 1px;
+    border-radius: 10px;
+    background-size: 100% 100%;
 }
