--- a/Front/hbb/src/css/mainpage.css
+++ b/Front/hbb/src/css/mainpage.css
@@ -33,7 +33,7 @@ main {
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100%;
