--- a/Front/hbb/src/css/standart/default.css
+++ b/Front/hbb/src/css/standart/default.css
@@ -5,7 +5,7 @@
     display: flex;
     border: var(--primary-color);
     color: var(--text-color-default);
-    background-image: linear-gradient(var(--primary-color-70), var(--primary-color));
+    background-image: linear-gradient(var(--button-color-primary), var(--button-color-primary-dark));
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 0 0;
