refactor roating, fetch requests. Made signup_module, refactor dirs arc. Refactor Spring controllers, create UserDataController and refactor profil controller

--- a/Front/hbb/src/css/components/userlogo.css
+++ b/Front/hbb/src/css/components/userlogo.css
@@ -7,6 +7,11 @@
     gap: 10px;
 }
 
+.user_image__container {
+    width: 40px;
+    height: 40px;
+}
+
 .user_image {
     border-radius: 20px;
 }
