--- a/Front/hbb/src/app/signin/singin.css
+++ b/Front/hbb/src/app/signin/singin.css
@@ -1,15 +1,15 @@
 .background{
     width: 430px;
     height: 520px;
-    position: absolute;
+    position: relative;
     transform: translate(-50%,-50%);
     left: 50%;
     top: 50%;
 }
-.background .shape{
+.shape{
     height: 200px;
     width: 200px;
-    position: absolute;
+    position: relative;
     border-radius: 50%;
 }
 .shape:first-child{
@@ -17,8 +17,6 @@
             #1845ad,
             #23a2f6
     );
-    left: -80px;
-    top: -80px;
 }
 .shape:last-child{
     background: linear-gradient(
@@ -26,14 +24,14 @@
             #ff512f,
             #f09819
     );
-    right: -30px;
-    bottom: -80px;
 }
+
+
+
 form{
-    height: 520px;
-    width: 400px;
+    width: 450px;
     background-color: var(--background-color-20);
-    position: absolute;
+    position: relative;
     transform: translate(-50%,-50%);
     top: 50%;
     left: 50%;
