--- a/Front/hbb/src/app/signup/singup.css
+++ b/Front/hbb/src/app/signup/singup.css
@@ -29,11 +29,12 @@
     right: -30px;
     bottom: -80px;
 }
+
+
 form{
-    height: 600px;
     width: 400px;
     background-color: var(--background-color-20);
-    position: absolute;
+    position: relative;
     transform: translate(-50%,-50%);
     top: 50%;
     left: 50%;
