--- a/Front/hbb/src/css/components/news_container.css
+++ b/Front/hbb/src/css/components/news_container.css
@@ -13,10 +13,14 @@
     margin-bottom: 30px;
 }
 
-.news__icon {
-    border-radius: 10px 0 0 10px;
+.news__icon__container {
+    position: relative;
     width: 40%;
     height: 100%;
+}
+
+.news__icon {
+    border-radius: 10px 0 0 10px;
 }
 
 .text__container {
