--- a/Front/hbb/src/css/components/userlogo.css
+++ b/Front/hbb/src/css/components/userlogo.css
@@ -8,10 +8,11 @@
 }
 
 .user_image__container {
+    position: relative;
     width: 40px;
     height: 40px;
 }
 
 .user_image {
-    border-radius: 20px;
+    border-radius: 40px;
 }
