--- a/Front/hbb/src/css/components/userinfo.css
+++ b/Front/hbb/src/css/components/userinfo.css
@@ -11,6 +11,7 @@
 }
 
 .profile__userinfo__container {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -25,16 +26,50 @@
     gap: 10px;
 }
 
+.profile__icon:hover {
+    border-color: rgba(138,138,138,0.78);
+    border-width: 5px;
+}
+
+.profile__icon__loader {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.vertical__line {
+    background-color: var(--primary-color-10);
+    height: 200px;
+    width: 4px;
+    margin-left: 10px;
+}
+
 .profile__icon {
     border-radius: 100%;
 }
 
 .profile__info {
+    width: 100%;
     margin-left: 20px;
+}
+
+.profile__info__2 {
+    width: 100%;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
 }
 
 .profile__external__text {
     max-width: 300px;
+}
+
+.profile__external__text__2 {
+    max-width: 300px;
+    text-align: right;
 }
 
 .profile__title {
