--- a/Front/hbb/src/app/(dashboard)/profile/profile.css
+++ b/Front/hbb/src/app/(dashboard)/profile/profile.css
@@ -1,11 +1,17 @@
 .profile__container {
+    margin-top: 40px;
+    height: 300px;
     width: 100%;
-    height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
 }
 
 .profile__courses__container {
+    height: 100%;
+    width: 60%;
+}
 
+.profile__course__container {
+    width: 100%;
+    height: 100%;
 }
