--- a/Front/hbb/src/css/components/navbar.css
+++ b/Front/hbb/src/css/components/navbar.css
@@ -1,3 +1,7 @@
+.nav__container {
+    width: 100%;
+}
+
 .navbar {
     width: 95%;
     display: flex;
@@ -37,7 +41,29 @@
     padding: 10px;
 }
 
+.menu__icon {
+    cursor: pointer;
+}
 
-@media (max-width: 767px) {
+.full__screen__menu__container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-color: var(--text-color-default);
+    animation: menu_animation 1s forwards ease-in;
+}
 
+@keyframes menu_animation {
+    0% {
+        opacity: 0;
+        height: 5px;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        height: 100%;
+    }
 }
