--- a/Front/hbb/src/app/(dashboard)/profile/profile.css
+++ b/Front/hbb/src/app/(dashboard)/profile/profile.css
@@ -1,6 +1,6 @@
 .profile__container {
     margin-top: 40px;
-    height: 300px;
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
@@ -9,9 +9,19 @@
 .profile__courses__container {
     height: 100%;
     width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .profile__course__container {
     width: 100%;
-    height: 100%;
+    height: 300px;
+}
+
+@media (max-width: 800px) {
+    .profile__courses__container {
+        width: 100%;
+    }
 }
