--- a/Front/hbb/src/css/components/navbar.css
+++ b/Front/hbb/src/css/components/navbar.css
@@ -53,6 +53,11 @@
     height: 5px;
     background-color: var(--text-color-default);
     animation: menu_animation 1s forwards ease-in;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
 }
 
 @keyframes menu_animation {
