--- a/Front/hbb/src/css/components/userinfo.css
+++ b/Front/hbb/src/css/components/userinfo.css
@@ -39,7 +39,7 @@
     cursor: pointer;
 }
 
-.vertical__line {
+.line {
     background-color: var(--primary-color-10);
     height: 200px;
     width: 4px;
@@ -74,4 +74,36 @@
 
 .profile__title {
 
+}
+
+@media (max-width: 800px) {
+    .profile__userinfo__background {
+        width: 100%;
+        height: 600px;
+        border-radius: 15px;
+        background: linear-gradient(
+                var(--background-color-80),
+                var(--background-color)
+        );
+        display: flex;
+        align-items: center;
+    }
+    .profile__userinfo__container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+    }
+    .line {
+        background-color: var(--primary-color-10);
+        width: 90%;
+        height: 4px;
+        margin-left: 10px;
+    }
+    .profile__external__text__2 {
+        max-width: 300px;
+        text-align: left;
+    }
 }
